--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,26 +1,23 @@
-name: Animal Farm Node.js CI
+name: Granja Animales Node.js CI  #
 
-on:
+on: #
   push:
    branches:
       - main
   pull_request:
     branches:
       - main
-
-jobs:
+jobs: #
   build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+    runs-on: ubuntu-latest #
+    steps: #
+    - name: Checkout repository # 
+      uses: actions/checkout@v2 #
     - name: Use Node.js
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v1 #
       with:
-        node-version: '18.x'
-    - name: Run Yarn
+        node-version: '20.x'
+    - name: Run Yarn #
       run: yarn
     - name: Run tests
       run: yarn test
